--- a/on1.css
+++ b/on1.css
@@ -12,6 +12,7 @@ h2{
     color: rgb(19, 3, 110);
     margin-right: 50px;
     margin-bottom: 40px;
+    margin-top: 40px;
 }
 label{
     font-size: 25px;
@@ -19,7 +20,7 @@ label{
     margin-right: 5px;
 
 }
-input[type="text"]{
+input[type="text"],input[type="number"]{
     font-size: 15px;
     font-family: initial;
     font-weight: initial;
@@ -47,7 +48,7 @@ input[type="text"]{
 #stock{
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;   
 }
 #stockList{
     margin-top: 100px;
@@ -55,6 +56,7 @@ input[type="text"]{
     left: 50%;
     position: absolute;
     transform: translate(-50%,50%);
+    
 }
 .delete{
     margin-left: 10px;
@@ -88,4 +90,25 @@ li ::before{
 }
 #stocklist :last-of-type(){
     margin-bottom: 100px;
+}
+#value{
+    margin-left:10px ;
+    font-size: 25px;
+}
+#price{
+    margin-left: 10px;
+}
+p{
+    display: inline;
+}
+#sort{
+    margin-left: 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(6, 107, 90);
+    color: rgb(231, 235, 230);
+    font-size: 20px;
+    padding: 10px 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
